# nanoworkai

./: AGENT_ARCHITECTURE.md  LINQ_DEBUGGING.md  README.md  api.py  context.md  embed_seed_data.py  package-lock.json  package.json  pyproject.toml  render.yaml  tasks.md  todo.md  vercel.json
agents/: build_orchestrator.py  builder.py  design_agent.py  dns.py  final_testing_agent.py  image_agent.py  marketer.py  page_builder_agent.py  scraper_agent.py  scraper_agent_v2.py  sdlc_artifacts.py  seo_agent.py  seo_agent_v2.py  static_fallbacks.py  unified_business_agent.py
assembly/: __init__.py  page_build_taxonomy.py
docs/: BUG_FIXES_SUMMARY.md  CHANGES_SUMMARY.md  CONTEXT_WINDOW_IMPLEMENTATION_README.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUANTIZED_MEMORY_ARCHITECTURE.md  SCRAPER_AGENT_GUIDE.md  SCRAPER_AGENT_SUMMARY.md  UNIFIED_AGENT_ARCHITECTURE.md  UNIFIED_AGENT_MIGRATION.md  VECTOR_MEMORY_GUIDE.md  VECTOR_MEMORY_SUMMARY.md  github-vercel-followups.md
examples/: multi_agent_usage.py
migrations/: 007_vector_memory.sql  008_quantized_embeddings.sql  20260508_agent_orchestration.sql  20260509_nano_waitlist_stripe_payment_audit.sql  2026_04_context_md_and_app_domain.sql  2026_04_cron_jobs.sql  2026_04_customer_checkout_config.sql  2026_04_drop_qa_contact_columns.sql  2026_04_github_repo_url.sql  2026_04_linq_waitlist_multirow.sql  2026_04_preview_status_lifecycle.sql  2026_05_collecting_pages_info_state.sql  2026_05_feedback_loop_state.sql  2026_05_github_repo_url_nano_waitlist.sql  2026_05_nano_sessions.sql  2026_05_page_build_type.sql  (+1 more)
(+13 files in other folders)
