[project]
name = "nanowork-mobile-agent"
version = "0.1.0"
description = "Minimal Python library + FastAPI server for a mobile agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "anthropic>=0.45.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.1",
  "supabase>=2.10.0",
  "pydantic>=2.12.5",
  "pillow>=12.2.0",
  "google-genai>=1.0.0",
  "markdown>=3.10.2",
  "psycopg2-binary>=2.9",
  "voyageai>=0.2.3",
  "numpy>=2.4.4",
  "pgvector>=0.3.6",
  "openai>=1.0.0",
]

[project.urls]
Repository = "https://github.com/nanoworkai/nanowork-mobile"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanowork_mobile"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
]
ml = [
    "torch>=2.5.0",
    "transformers>=4.48.0",
    "sentence-transformers>=3.3.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "breaking: marks tests that guard against accidental breaking changes",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes (unused imports, undefined names, etc.)
    "I",     # isort (import ordering)
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line length handled by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]
